--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -63,6 +63,18 @@
     <Compile Include="MyClass\TemplateLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Window_Other_Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window_Other_Options.Designer.cs">
+      <DependentUpon>Window_Other_Options.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Window_Resistances.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window_Resistances.Designer.cs">
+      <DependentUpon>Window_Resistances.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +91,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Window_Other_Options.resx">
+      <DependentUpon>Window_Other_Options.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Window_Resistances.resx">
+      <DependentUpon>Window_Resistances.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -116,9 +134,12 @@
     <Content Include="Resources\medium_achievement_bg_captureflag_eos.jpg" />
     <Content Include="Resources\medium_achievement_bg_captureflag_wsg.jpg" />
     <Content Include="Resources\medium_achievement_bg_interruptx_flagcapture_attempts.jpg" />
+    <None Include="Resources\medium_inv_misc_bag_09_green.jpg" />
     <Content Include="Resources\medium_inv_misc_bag_14.jpg" />
+    <None Include="Resources\medium_inv_misc_enggizmos_26.jpg" />
     <Content Include="Resources\medium_inv_misc_head_02.jpg" />
     <Content Include="Resources\medium_inv_misc_tournaments_tabard_bloodelf.jpg" />
+    <None Include="Resources\medium_spell_fire_frostresistancetotem.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
