--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -44,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyOpacuePanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MyTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -63,11 +67,29 @@
     <Compile Include="MyClass\TemplateLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Window_BagFamilyMask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window_BagFamilyMask.Designer.cs">
+      <DependentUpon>Window_BagFamilyMask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Window_ClassMask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window_ClassMask.Designer.cs">
+      <DependentUpon>Window_ClassMask.cs</DependentUpon>
+    </Compile>
     <Compile Include="Window_Other_Options.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Window_Other_Options.Designer.cs">
       <DependentUpon>Window_Other_Options.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Window_RaceMask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Window_RaceMask.Designer.cs">
+      <DependentUpon>Window_RaceMask.cs</DependentUpon>
     </Compile>
     <Compile Include="Window_Resistances.cs">
       <SubType>Form</SubType>
@@ -91,8 +113,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Window_BagFamilyMask.resx">
+      <DependentUpon>Window_BagFamilyMask.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Window_ClassMask.resx">
+      <DependentUpon>Window_ClassMask.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Window_Other_Options.resx">
       <DependentUpon>Window_Other_Options.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Window_RaceMask.resx">
+      <DependentUpon>Window_RaceMask.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Window_Resistances.resx">
       <DependentUpon>Window_Resistances.cs</DependentUpon>
@@ -134,6 +165,26 @@
     <Content Include="Resources\medium_achievement_bg_captureflag_eos.jpg" />
     <Content Include="Resources\medium_achievement_bg_captureflag_wsg.jpg" />
     <Content Include="Resources\medium_achievement_bg_interruptx_flagcapture_attempts.jpg" />
+    <None Include="Resources\small_achievement_character_undead_male.jpg" />
+    <None Include="Resources\small_achievement_character_troll_male.jpg" />
+    <None Include="Resources\small_achievement_character_tauren_male.jpg" />
+    <None Include="Resources\small_achievement_character_orc_male.jpg" />
+    <None Include="Resources\small_achievement_character_nightelf_female.jpg" />
+    <None Include="Resources\small_achievement_character_human_female.jpg" />
+    <None Include="Resources\small_achievement_character_gnome_male.jpg" />
+    <None Include="Resources\small_achievement_character_dwarf_male.jpg" />
+    <None Include="Resources\small_achievement_character_draenei_female.jpg" />
+    <None Include="Resources\small_achievement_character_bloodelf_female.jpg" />
+    <None Include="Resources\small_spell_shaman_improvedstormstrike.jpg" />
+    <None Include="Resources\small_spell_holy_searinglightpriest.jpg" />
+    <None Include="Resources\small_spell_deathknight_classicon.jpg" />
+    <None Include="Resources\small_ability_warrior_savageblow.jpg" />
+    <None Include="Resources\small_ability_warlock_improvedsoulleech.jpg" />
+    <None Include="Resources\small_ability_rogue_dualweild.jpg" />
+    <None Include="Resources\small_ability_paladin_hammeroftherighteous.jpg" />
+    <None Include="Resources\small_ability_mage_frostfirebolt.jpg" />
+    <None Include="Resources\small_ability_hunter_snipershot.jpg" />
+    <None Include="Resources\small_ability_druid_improvedtreeform.jpg" />
     <None Include="Resources\medium_inv_misc_bag_09_green.jpg" />
     <Content Include="Resources\medium_inv_misc_bag_14.jpg" />
     <None Include="Resources\medium_inv_misc_enggizmos_26.jpg" />
