starting to build the QueryHandler.cs
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyClass\QueryHandler.cs" />
     <Compile Include="MyControls\MyOpacuePanel.cs">
       <SubType>Component</SubType>
     </Compile>
