--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E1FA206C-62FC-4AB2-81A4-416D09E0495D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TIC19</RootNamespace>
-    <AssemblyName>TIC19</AssemblyName>
+    <RootNamespace>TrinityItemCreator</RootNamespace>
+    <AssemblyName>TrinityItemCreator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
