--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Form4.Designer.cs">
       <DependentUpon>Form4.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyClass\MyData.cs" />
     <Compile Include="MyClass\QueryHandler.cs" />
     <Compile Include="MyControls\MyOpacuePanel.cs">
       <SubType>Component</SubType>
