--- a/TIC19/TIC19.csproj
+++ b/TIC19/TIC19.csproj
@@ -10,6 +10,8 @@
     <AssemblyName>TrinityItemCreator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -268,6 +270,9 @@
     <Content Include="Resources\medium_inv_misc_head_02.jpg" />
     <Content Include="Resources\medium_inv_misc_tournaments_tabard_bloodelf.jpg" />
     <None Include="Resources\medium_spell_fire_frostresistancetotem.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
