--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 language: node_js
 node_js:
   - "stable"
