--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-language: node_js
-node_js:
-  - "stable"
+language: ruby
+rvm:
+ - 2.2
+ - jruby
