Allow XML templates to be dragged over the Form1 to load
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TrinityItemCreator/TrinityItemCreator.csproj
+++ b/TrinityItemCreator/TrinityItemCreator.csproj
@@ -229,6 +229,7 @@
   <ItemGroup>
     <None Include="Resources\small_petbattle_health_down.jpg" />
     <None Include="Resources\small_inv_misc_wrench_01.jpg" />
+    <None Include="Resources\icon_GAMFTdatamovement.png" />
     <Content Include="TrinityItemCreator.ico" />
     <None Include="Resources\ability_repair.jpg" />
     <Content Include="Resources\large_ability_hunter_wildquiver.jpg" />
