--- a/TrinityItemCreator/TrinityItemCreator.csproj
+++ b/TrinityItemCreator/TrinityItemCreator.csproj
@@ -240,6 +240,7 @@
     <None Include="Resources\small_inv_misc_wrench_01.jpg" />
     <None Include="Resources\icon_GAMFTdatamovement.png" />
     <None Include="Resources\Copy_File-512.png" />
+    <None Include="Resources\bag_32_32.png" />
     <Content Include="TrinityItemCreator.ico" />
     <None Include="Resources\ability_repair.jpg" />
     <Content Include="Resources\large_ability_hunter_wildquiver.jpg" />
