--- a/TrinityItemCreator/TrinityItemCreator.csproj
+++ b/TrinityItemCreator/TrinityItemCreator.csproj
@@ -49,7 +49,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>TrinityItemCreator.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\TrinityItemCreator.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,16 +65,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form_Save_Custom_Template.cs">
+    <Compile Include="Dialog Forms\Form_Save_Custom_Template.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Save_Custom_Template.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Save_Custom_Template.Designer.cs">
       <DependentUpon>Form_Save_Custom_Template.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Load_Custom_Template.cs">
+    <Compile Include="Dialog Forms\Form_Load_Custom_Template.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Load_Custom_Template.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Load_Custom_Template.Designer.cs">
       <DependentUpon>Form_Load_Custom_Template.cs</DependentUpon>
     </Compile>
     <Compile Include="MyClass\MyData.cs" />
@@ -92,96 +92,91 @@
     <Compile Include="Form_Main.Designer.cs">
       <DependentUpon>Form_Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Default_Templates.cs">
+    <Compile Include="Dialog Forms\Form_Default_Templates.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Default_Templates.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Default_Templates.Designer.cs">
       <DependentUpon>Form_Default_Templates.cs</DependentUpon>
     </Compile>
     <Compile Include="MyClass\Functions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Form_Bag_Family_Mask.cs">
+    <Compile Include="Dialog Forms\Form_Bag_Family_Mask.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Bag_Family_Mask.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Bag_Family_Mask.Designer.cs">
       <DependentUpon>Form_Bag_Family_Mask.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Allowable_Class.cs">
+    <Compile Include="Dialog Forms\Form_Allowable_Class.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Allowable_Class.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Allowable_Class.Designer.cs">
       <DependentUpon>Form_Allowable_Class.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_DisplayID_Finder.cs">
+    <Compile Include="Dialog Forms\Form_DisplayID_Finder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_DisplayID_Finder.Designer.cs">
+    <Compile Include="Dialog Forms\Form_DisplayID_Finder.Designer.cs">
       <DependentUpon>Form_DisplayID_Finder.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Item_Description.cs">
+    <Compile Include="Dialog Forms\Form_Item_Description.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Item_Description.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Item_Description.Designer.cs">
       <DependentUpon>Form_Item_Description.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Flags_Custom.cs">
+    <Compile Include="Dialog Forms\Form_Flags_Custom.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Flags_Custom.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Flags_Custom.Designer.cs">
       <DependentUpon>Form_Flags_Custom.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Flags_Extra.cs">
+    <Compile Include="Dialog Forms\Form_Flags_Extra.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Flags_Extra.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Flags_Extra.Designer.cs">
       <DependentUpon>Form_Flags_Extra.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Flags.cs">
+    <Compile Include="Dialog Forms\Form_Flags.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Flags.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Flags.Designer.cs">
       <DependentUpon>Form_Flags.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Stats_Generator.cs">
+    <Compile Include="Dialog Forms\Form_Stats_Generator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Stats_Generator.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Stats_Generator.Designer.cs">
       <DependentUpon>Form_Stats_Generator.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Other_Columns.cs">
+    <Compile Include="Dialog Forms\Form_Other_Columns.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Other_Columns.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Other_Columns.Designer.cs">
       <DependentUpon>Form_Other_Columns.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Allowable_Race.cs">
+    <Compile Include="Dialog Forms\Form_Allowable_Race.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Allowable_Race.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Allowable_Race.Designer.cs">
       <DependentUpon>Form_Allowable_Race.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form_Resistances.cs">
+    <Compile Include="Dialog Forms\Form_Resistances.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Resistances.Designer.cs">
+    <Compile Include="Dialog Forms\Form_Resistances.Designer.cs">
       <DependentUpon>Form_Resistances.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form_Main.resx">
       <DependentUpon>Form_Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Default_Templates.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Default_Templates.resx">
       <DependentUpon>Form_Default_Templates.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Save_Custom_Template.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Save_Custom_Template.resx">
       <DependentUpon>Form_Save_Custom_Template.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Load_Custom_Template.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Load_Custom_Template.resx">
       <DependentUpon>Form_Load_Custom_Template.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -189,43 +184,51 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Bag_Family_Mask.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Bag_Family_Mask.resx">
       <DependentUpon>Form_Bag_Family_Mask.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Allowable_Class.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Allowable_Class.resx">
       <DependentUpon>Form_Allowable_Class.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_DisplayID_Finder.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_DisplayID_Finder.resx">
       <DependentUpon>Form_DisplayID_Finder.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Item_Description.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Item_Description.resx">
       <DependentUpon>Form_Item_Description.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Flags_Custom.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Flags_Custom.resx">
       <DependentUpon>Form_Flags_Custom.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Flags_Extra.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Flags_Extra.resx">
       <DependentUpon>Form_Flags_Extra.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Flags.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Flags.resx">
       <DependentUpon>Form_Flags.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Stats_Generator.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Stats_Generator.resx">
       <DependentUpon>Form_Stats_Generator.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Other_Columns.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Other_Columns.resx">
       <DependentUpon>Form_Other_Columns.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Allowable_Race.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Allowable_Race.resx">
       <DependentUpon>Form_Allowable_Race.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Resistances.resx">
+    <EmbeddedResource Include="Dialog Forms\Form_Resistances.resx">
       <DependentUpon>Form_Resistances.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="data\displayidlist.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -237,12 +240,31 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\small_petbattle_health_down.jpg" />
-    <None Include="Resources\small_inv_misc_wrench_01.jpg" />
-    <None Include="Resources\icon_GAMFTdatamovement.png" />
     <None Include="Resources\Copy_File-512.png" />
-    <None Include="Resources\bag_32_32.png" />
-    <Content Include="TrinityItemCreator.ico" />
-    <None Include="Resources\ability_repair.jpg" />
+    <None Include="Resources\icon_setting.png" />
+    <None Include="Resources\icon_templates.png" />
+    <None Include="Resources\icon_export.png" />
+    <None Include="Resources\icon_sql.png" />
+    <None Include="Resources\icon_clipboard.png" />
+    <None Include="Resources\icon_right_arrow_3.png" />
+    <None Include="Resources\icon_right_arrow_2.png" />
+    <None Include="Resources\icon_right_arrow_1.png" />
+    <Content Include="data\get_displayidlist.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="Resources\icon_functions.png" />
+    <None Include="Resources\icon_about.png" />
+    <None Include="Resources\icon_bag.png" />
+    <None Include="Resources\icon_import.png" />
+    <None Include="Resources\icon_database.png" />
+    <None Include="Resources\icon_dbc.png" />
+    <None Include="Resources\icon_db_connection.png" />
+    <None Include="Resources\icon_sql_prefix.png" />
+    <None Include="Resources\icon_more.png" />
+    <Content Include="templates\My First Template Example.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\TrinityItemCreator.ico" />
     <Content Include="Resources\large_ability_hunter_wildquiver.jpg" />
     <Content Include="Resources\large_ability_warrior_weaponmastery.jpg" />
     <Content Include="Resources\large_achievement_bg_captureflag_eos.jpg" />
@@ -266,7 +288,6 @@
     <Content Include="Resources\medium_achievement_bg_captureflag_eos.jpg" />
     <Content Include="Resources\medium_achievement_bg_captureflag_wsg.jpg" />
     <Content Include="Resources\medium_achievement_bg_interruptx_flagcapture_attempts.jpg" />
-    <None Include="Resources\small_inv_misc_bandage_10.jpg" />
     <None Include="Resources\small_ability_vanish.jpg" />
     <None Include="Resources\small_spell_arcane_studentofmagic.jpg" />
     <None Include="Resources\small_petbattle_health.jpg" />
@@ -304,5 +325,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
