--- a/TrinityItemCreator/App.config
+++ b/TrinityItemCreator/App.config
@@ -13,6 +13,21 @@
             <setting name="SQLPrefix" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="db_hostname" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="db_port" serializeAs="String">
+                <value>3306</value>
+            </setting>
+            <setting name="db_user" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="db_pass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="db_name" serializeAs="String">
+                <value>world</value>
+            </setting>
         </TrinityItemCreator.Properties.Settings>
     </userSettings>
 </configuration>
