Update assembly to 4.5.2 net framework, add mysql connection, add import to databse option
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TrinityItemCreator/App.config
+++ b/TrinityItemCreator/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="TrinityItemCreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="TrinityItemCreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <userSettings>
         <TrinityItemCreator.Properties.Settings>
@@ -14,7 +14,7 @@
                 <value>0</value>
             </setting>
             <setting name="db_hostname" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="db_port" serializeAs="String">
                 <value>3306</value>
@@ -23,7 +23,7 @@
                 <value>root</value>
             </setting>
             <setting name="db_pass" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="db_name" serializeAs="String">
                 <value>world</value>
