1 step ahead for multicore implementation
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TrinityItemCreator/Properties/Settings.settings
+++ b/TrinityItemCreator/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="db_name" Type="System.String" Scope="User">
       <Value Profile="(Default)">world</Value>
     </Setting>
+    <Setting Name="item_template_name" Type="System.String" Scope="User">
+      <Value Profile="(Default)">item_template_trinitycore_3.3.5</Value>
+    </Setting>
+    <Setting Name="item_template_selected" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
