--- a/TrinityItemCreator/App.config
+++ b/TrinityItemCreator/App.config
@@ -14,7 +14,7 @@
                 <value>0</value>
             </setting>
             <setting name="db_hostname" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="db_port" serializeAs="String">
                 <value>3306</value>
@@ -23,10 +23,16 @@
                 <value>root</value>
             </setting>
             <setting name="db_pass" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="db_name" serializeAs="String">
                 <value>world</value>
+            </setting>
+            <setting name="item_template_name" serializeAs="String">
+                <value>item_template_trinitycore_3.3.5</value>
+            </setting>
+            <setting name="item_template_selected" serializeAs="String">
+                <value>0</value>
             </setting>
         </TrinityItemCreator.Properties.Settings>
     </userSettings>
