Big code cleanup and conversion to 2nd step for multicore support
Signed-off-by: asandru <artister.hd@gmail.com>

--- a/TrinityItemCreator/App.config
+++ b/TrinityItemCreator/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <TrinityItemCreator.Properties.Settings>
             <setting name="SQLPrefix" serializeAs="String">
-                <value>0</value>
+                <value>INSERT</value>
             </setting>
             <setting name="db_hostname" serializeAs="String">
                 <value />
