--- a/TrinityItemCreator/Properties/Settings.settings
+++ b/TrinityItemCreator/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TrinityItemCreator.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="SQLPrefix" Type="System.String" Scope="User">
-      <Value Profile="(Default)">INSERT</Value>
+    <Setting Name="SQLPrefix" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="db_hostname" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -19,12 +19,6 @@
     </Setting>
     <Setting Name="db_name" Type="System.String" Scope="User">
       <Value Profile="(Default)">world</Value>
-    </Setting>
-    <Setting Name="item_template_name" Type="System.String" Scope="User">
-      <Value Profile="(Default)">item_template_trinitycore_3.3.5</Value>
-    </Setting>
-    <Setting Name="item_template_selected" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
