--- a/TrinityItemCreator/TrinityItemCreator.csproj
+++ b/TrinityItemCreator/TrinityItemCreator.csproj
@@ -79,6 +79,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dialog Forms\Form_Armor_Sets_Creator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialog Forms\Form_Armor_Sets_Creator.Designer.cs">
+      <DependentUpon>Form_Armor_Sets_Creator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialog Forms\Form_DB_Info.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     <Compile Include="Dialog Forms\Form_Resistances.Designer.cs">
       <DependentUpon>Form_Resistances.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Dialog Forms\Form_Armor_Sets_Creator.resx">
+      <DependentUpon>Form_Armor_Sets_Creator.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialog Forms\Form_DB_Info.resx">
       <DependentUpon>Form_DB_Info.cs</DependentUpon>
     </EmbeddedResource>
